<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/ic_recipe"
            android:title="@string/nav_recipe" />
        <item
            android:id="@+id/nav_meal_planner"
            android:icon="@drawable/ic_planner"
            android:title="@string/nav_meal_planner" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_weaning_guide"
            android:icon="@drawable/ic_guide"
            android:title="@string/nav_weaning_guide" />

    </group>
    <item android:title="@string/nav_about_us">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/nav_feedback" />
            <item
                android:id="@+id/nav_policy"
                android:icon="@drawable/ic_policy"
                android:title="@string/nav_policy" />
        </menu>
    </item>
</menu>
